crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__tuple_accessor_function_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: ".1 (1, 2, 3)\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            TupleAccessFunction=>DotNumber@0
            InlineApply=>DotNumber@0
            (BeginParens Num=>IntBase10@2 Num=>IntBase10@4 Num=>IntBase10@6 EndParens)
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(TupleAccessFunction(".1"), [Tuple([IntBase10("1"), IntBase10("2"), IntBase10("3")])])

[=== formatted below ===]

