crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__two_arg_closure_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\\a, b -> 42\n"
---
(BeginTopLevelDecls
    HintExpr
    (BeginLambda
        Ident=>LowerIdent@1
        Ident=>LowerIdent@3
        InlineLambdaArrow=>OpArrow@4
        Num=>IntBase10@5
    EndLambda)
EndTopLevelDecls)

[=== canfmt below ===]
Lambda([Ident("a"), Ident("b")], IntBase10("42"))

[=== formatted below ===]

