crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__two_backpassing_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "# leading comment\nx <- \\y -> y\nz <- {}\n\nx\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginBackpassing
            Ident=>LowerIdent@0
            InlineBackArrow=>OpBackArrow@1
            (BeginLambda
                Ident=>LowerIdent@3
                InlineLambdaArrow=>OpArrow@4
                Ident=>LowerIdent@5
            EndLambda)
        EndBackpassing)
        (BeginBackpassing
            Ident=>LowerIdent@6
            InlineBackArrow=>OpBackArrow@7
            (BeginRecord EndRecord)
        EndBackpassing)
        HintExpr
        Ident=>LowerIdent@10
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Backpassing([Ident("x")], Lambda([Ident("y")], Ident("y")))
Backpassing([Ident("z")], Record([]))
Ident("x")

[=== formatted below ===]

