crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__two_branch_when_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "when x is\n    \"\" -> 1\n    \"mise\" -> 2\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginWhen
            Ident=>LowerIdent@1
            InlineKwIs=>KwIs@2
            String=>String@3
            InlineWhenArrow=>OpArrow@4
            Num=>IntBase10@5
            String=>String@6
            InlineWhenArrow=>OpArrow@7
            Num=>IntBase10@8
        EndWhen)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(Ident("x"), [String("\"\""), IntBase10("1"), String("\"mise\""), IntBase10("2")])

[=== formatted below ===]

